# RAG-with-LLMs-TREC-2025-Information-Retrieval

./: .coderabbit.yaml  .gitignore  LICENSE.md  README.md  TASK.md  package.json
.docs/: KPI.md  README.md  api.md  coding-conventions.md  setup.md
.docs/meetings/: 20251010.md
.docs/uml/: README.md  classes.puml  components.puml  generated_classes.puml  sequence_e2e.puml
.github/workflows/: lint-backend.yml  lint-frontend.yml
analysis/: .gitignore  README.md  pyproject.toml  qrels_essential_analysis.ipynb  setup_kernel.sh
analysis/data/: mandatory_base_documents.csv
backend/api/: .env.example  pyproject.toml
backend/api/app/: __init__.py  config.py  main.py
backend/api/app/endpoints/: __init__.py
backend/api/app/endpoints/health/: __init__.py  router.py
backend/api/app/endpoints/metadata/: __init__.py  router.py
backend/api/app/endpoints/retrieve/: __init__.py  router.py
backend/api/app/middleware/: __init__.py  auth.py
backend/api/app/services/: __init__.py  mock_retrieval.py
backend/embeddings/: .env.example  pyproject.toml
backend/eval/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  test_run_all.py
backend/eval/eval_cli/: __init__.py  client.py  config.py  main.py
backend/eval/eval_cli/commands/: benchmark.py  generate.py  mock.py  pipeline.py  runs.py  score.py  topics.py
backend/eval/eval_cli/io/: __init__.py  qrels.py  runs.py  topics.py
backend/eval/eval_cli/mock/: __init__.py  baseline_loader.py
backend/eval/eval_cli/models/: __init__.py  baselines.py  reports.py  runs.py  topics.py
backend/eval/eval_cli/scoring/: __init__.py  custom_metrics.py  kpi_analyzer.py  trec_eval.py
backend/eval/tests/: __init__.py  conftest.py  test_basic.py
backend/eval/tests/fixtures/: qrels_sample.txt  topics_sample.jsonl  topics_sample.txt
frontend/: .env.example  deno.json
frontend/src/: app.ts
scripts/: generate-uml.sh  generate_uml.py  pull_qrels.sh  update-deps.sh
shared/: pyproject.toml
shared/src/shared/: __init__.py  enums.py
shared/src/shared/backend/: __init__.py  responses.py
shared/src/shared/data/: __init__.py  dataset.py  index.py
shared/src/shared/evaluation/: __init__.py  metrics.py  reports.py  runs.py
shared/src/shared/retrieval/: __init__.py  config.py  request.py  response.py
