[tool.poetry]
name = "corpus-analysis"
version = "0.1.0"
description = "Corpus subsampling analysis for TREC RAG 2025"
authors = ["TREC RAG 2025 Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

