[tool.poetry]
name = "shared-types"
version = "0.1.0"
description = "Shared Pydantic models for RAG TREC 2025 project"
authors = ["RAG Team"]
license = "MIT"
readme = "../README.md"
package-mode = true
packages = [{include = "shared", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
