[tool.poetry]
name = "backend-eval"
version = "0.1.0"
description = "Evaluation toolkit"
authors = ["RAG Team"]
license = "MIT"
readme = "../../README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
shared-types = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.0"
pytest = "^8.3.3"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
