[tool.poetry]
name = "backend-eval"
version = "0.1.0"
description = "Evaluation toolkit"
authors = ["RAG Team"]
license = "MIT"
readme = "../../README.md"
package-mode = true
packages = [{include = "eval_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
shared-types = {path = "../../shared", develop = false, extras = []}
typer = {extras = ["all"], version = "^0.9.0"}
httpx = "^0.27.0"
pyyaml = "^6.0.2"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
rich = "^13.9.2"
pytrec-eval = "^0.5.0,<0.6"
click = "^8.1.0,<8.2.0"

[tool.poetry.scripts]
eval = "eval_cli.main:app"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-httpx = "^0.30.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM"]
ignore = [
    "B008",  # Typer decorators and CLI error handling patterns
    "B904",  # CLI error handling patterns
    "E501",  # Line too long (allow longer lines for readability in docstrings/error messages)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
